2001-09-24  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gtiff/libtiff: upgraded to approximately libtiff 3.5.7.

	* frmts/envisat/envisatdataset.cpp: added MDS2 (as band 2) and metadata
	support (all values from the MPH and SPH).

	* frmts/gtiff/libtiff/tif_vsi.c: fixed implementation of SizeProc. 

2001-09-21  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogr_geometry.h: added transform() and transformTo() methods.

	* ogr/ogr_spatialref.h: added SetFromUserInput() method.

	* ogr/ogr2ogr.cpp: added -t_srs and -a_srs options.

2001-09-19  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/doq2dataset.cpp: fixes for file submitted by Eric Miller,
	and also overhauled to return all non-structural fields as metadata.

2001-09-17  Frank Warmerdam  <warmerdam@pobox.com>

	* aclocal.m4: added printf() call to -shared test to ensure cygwin
	doesn't falsely succeed.

	* frmts/gdalallregister.cpp: register doq2 format ... it seems to 
	have been omitted.

2001-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: modified --with-libz handling as per bug 75, to be
	more standard.

	http://bugzilla.remotesensing.org/show_bug.cgi?id=76

===============================================================================
	
2001-09-15  Frank Warmerdam  <warmerdam@pobox.com>

	* Release GDAL 1.1.5.

	* Modify include order in most GNUmakefiles to ensure that 
	include paths for system stuff (like /usr/local/include) don't take
	priority over application include files in GDAL tree.  Especially
	important when there is an old GDAL already installed.

	* ogr/ogrsf_frmts/mitab: Upgraded to include fast spatial query 
	support, and attribute query support.

2001-09-06  Frank Warmerdam  <warmerdam@pobox.com>

	* bridge: upgrade bridge error reporting, add GCP functions.

2001-09-04  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/shape: added support for deferred determination
	of output file geometry type (from first feature), and added better